# Love-Island-Prediction-Model

./: .gitignore  BLOCKERS.md  DECISIONS.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: layout.tsx  page.tsx  styles.css
app/api/manual/: _shared.ts
app/api/manual/episode/: route.ts
app/api/manual/tiktok/: route.ts
data/config/: recap_events.season8.json  show_priors.season8.json
docs/: SCRAPING_PIPELINE_PLAN.md
lib/: model.ts  season-data.ts  types.ts
public/data/processed/: source_health.json
public/data/processed/predictions/: season8_daily.json
public/islanders/: README.md
scripts/: build_features.py  collect_daily.py  collect_trends.py  export_predictions.py  finalize_season8.py  init_db.py  install_daily_task.ps1  run_daily_pipeline.py  run_daily_update.ps1  save_manual_entry.py  seed_sample_posts.py
src/islandedge/: __init__.py  agent_reach.py  config.py  contestants.py  context.py  export.py  features.py  ingest.py  scoring.py  storage.py  trends.py
tests/: test_agent_reach.py  test_context.py  test_export.py  test_features.py  test_scoring.py  test_trends.py
