[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "islandedge"
version = "0.1.0"
description = "Love Island USA sentiment forecasting MVP"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "pytrends>=4.9.2",
  "vaderSentiment>=3.3.2",
  "scikit-learn>=1.5.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
